provarAnt/00D1b0000000d5bEAA/objects/geopointe__Geo_Location__c.object
<CustomObject>
    <description>Holds custom address locations captured by Geopointe end users</description>
    <fields>
        <fullName>geopointe__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Latitude__c</fullName>
        <inlineHelpText>If you collect your own coordinates for your locations, you can put the latitude here. The system will use this location instead of the address on the record.</inlineHelpText>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Longitude__c</fullName>
        <inlineHelpText>If you collect your own coordinates for your locations, you can put the longitude here. The system will use this location instead of the address on the record.</inlineHelpText>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__State__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Temporary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this is used by the system as a temporary record.  It is not intended to be saved long-term.  The system will periodically clean these records up.</inlineHelpText>
        <label>Temporary</label>
        <type>Checkbox</type>
    </fields>
    <label>Geo Location</label>
    <listViews>
        <fullName>geopointe__All_Locations</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Street__c</columns>
        <columns>geopointe__City__c</columns>
        <columns>geopointe__State__c</columns>
        <columns>geopointe__PostalCode__c</columns>
        <columns>geopointe__Country__c</columns>
        <columns>geopointe__Temporary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Locations</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Created_Today</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Street__c</columns>
        <columns>geopointe__City__c</columns>
        <columns>geopointe__State__c</columns>
        <columns>geopointe__PostalCode__c</columns>
        <columns>geopointe__Country__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>geopointe__Temporary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>geopointe__Geocode__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>geopointe__My_Saved_Locations</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Street__c</columns>
        <columns>geopointe__City__c</columns>
        <columns>geopointe__State__c</columns>
        <columns>geopointe__PostalCode__c</columns>
        <columns>geopointe__Country__c</columns>
        <columns>geopointe__Latitude__c</columns>
        <columns>geopointe__Longitude__c</columns>
        <columns>geopointe__Geocode__c</columns>
        <columns>geopointe__Temporary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>geopointe__Temporary__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Saved Locations</label>
    </listViews>
    <listViews>
        <fullName>geopointe__My_Temporary_Locations</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Street__c</columns>
        <columns>geopointe__City__c</columns>
        <columns>geopointe__State__c</columns>
        <columns>geopointe__PostalCode__c</columns>
        <columns>geopointe__Country__c</columns>
        <columns>geopointe__Temporary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>geopointe__Temporary__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Temporary Locations</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>